[package]
name = "fast-steal"
description = "特别快的多线程库，支持超细颗粒度的任务窃取"
version = "3.0.2"
edition = "2024"
authors = ["share121 <2854631158@qq.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/share121/fast-steal"
homepage = "https://github.com/share121/fast-steal"
documentation = "https://docs.rs/fast-steal"
exclude = ["/.github"]
keywords = ["parallel", "thread", "concurrency", "performance", "no-std"]
categories = ["concurrency", "no-std"]

[dependencies]
bumpalo = "3.17.0"
spin = { version = "0.10.0", default-features = false, features = [
  "spin_mutex",
] }
