[package]
name = "fast-steal"
description = "特别快的多线程库，支持超细颗粒度的任务窃取"
version = "3.0.2"
edition = "2024"
authors = ["share121 <2854631158@qq.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/share121/fast-steal"
homepage = "https://github.com/share121/fast-steal"
documentation = "https://docs.rs/fast-steal"
exclude = ["/.github"]
keywords = ["parallel", "thread", "concurrency", "performance", "no-std"]
categories = ["concurrency", "no-std"]

[dependencies]
async-trait = { version = "0.1.88", optional = true }
bumpalo = "3.17.0"
spin = { version = "0.10.0", default-features = false, features = [
  "spin_mutex",
], optional = true }
tokio = { version = "1", optional = true, default-features = false, features = [
  "sync",
  "rt",
  "macros",
] }

[features]
default = ["sync", "tokio"]
tokio = ["dep:tokio", "dep:async-trait"]
sync = ["dep:spin"]
